--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "chat-app",
   "version": "1.0.0",
+  "engines": {
+    "node": "16.14.2"
+  },
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "node server/server.js",
+    "server": "nodemon server/server.js",
     "client": "npm start --prefix client",
     "start": "concurrently  \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
-  },
-  "engines": {
-      "node": "16.14.2"
   },
   "keywords": [],
   "author": "",
