--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "chat-app",
   "version": "1.0.0",
   "engines": {
-    "node": "16.14.2"
+    "node": "16.14.2",
+    "npm": "8.5.0"
   },
   "description": "",
   "main": "index.js",
