--- a/package.json
+++ b/package.json
@@ -19,13 +19,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "colors": "^1.4.0",
+    "concurrently": "^7.5.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "socket.io": "^4.5.3"
-  },
-  "devDependencies": {
-    "colors": "^1.4.0",
-    "concurrently": "^7.5.0",
-    "cors": "^2.8.5"
   }
 }
