--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon server/server.js",
-    "client": "npm start --prefix client",
-    "start": "concurrently  \"npm run server\" \"npm run client\"",
+    "server": "node server/server.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
