--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/server.js",
+    "server": "node server/server.js",
+    "client": "npm start --prefix client",
+    "start": "concurrently  \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "colors": "^1.4.0",
-    "concurrently": "^7.5.0",
-    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "socket.io": "^4.5.3"
+  },
+  "devDependencies": {
+    "colors": "^1.4.0",
+    "concurrently": "^7.5.0",
+    "cors": "^2.8.5"
   }
 }
