--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "chat-app",
   "version": "1.0.0",
   "engines": {
-    "node": "16.14.2",
-    "npm": "8.5.0"
+    "node": "18.17.1",
+    "npm": "9.8.1"
   },
   "description": "",
   "main": "index.js",
@@ -13,7 +13,7 @@
     "server": "node server/server.js",
     "client": "npm start --prefix client",
     "start": "concurrently  \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "build": "npm install && npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "",
@@ -21,7 +21,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "socket.io": "^4.5.3"
+    "socket.io": "^4.7.4"
   },
   "devDependencies": {
     "colors": "^1.4.0",
