--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
 /node_modules
 .env
+
+# This code is for local json database
+# socket.on('send_message', (room, chat) => {
+    
+#     const data = JSON.parse(readFileSync('server/db/chat.json'));
+#     const rooms = Object.keys(data);
+#     const is_room = rooms.find((data) => data == room);
+
+#     if (rooms && is_room) {
+#       data[is_room].push(chat);
+#       writeFileSync('server/db/chat.json', JSON.stringify(data));
+#       io.in(room).emit('receive_message', data[is_room]);
+#     } else {
+#       const new_chat = { ...data, [room]: [chat] };
+#       writeFileSync('server/db/chat.json', JSON.stringify(new_chat));
+#       io.in(room).emit('receive_message', new_chat[room]);
+#     }
+# });
