--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chat-app",
   "version": "1.0.0",
   "engines": {
-    "node": "18.17.1",
+    "node": "20.11.1",
     "npm": "9.8.1"
   },
   "description": "",
@@ -11,8 +11,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "node server/server.js",
+    "dev": "nodemon server/server.js",
     "client": "npm start --prefix client",
-    "start": "concurrently  \"npm run server\" \"npm run client\"",
+    "start": "concurrently  \"npm run dev\" \"npm run client\"",
     "build": "npm install && npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
@@ -21,6 +22,8 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "mongoose": "^8.1.3",
     "socket.io": "^4.7.4"
   },
   "devDependencies": {
